# Xenomai_Quad

./: .ninja_deps  .ninja_log  CMakeCache.txt.prev  CMakeLists.txt  CMakeLists.txt.user.3398f8d  CMakeLists.txt.user.e4187fd  Controlwindow.ui  Newwindow.cpp  Newwindow.h  Newwindow.ui  RT_ECAT_MASTER_ELMO_GOLD  aaa.cpp  aaa.h  aaa.ui  actuator.cpp  actuator.h  build.ninja  cmake_install.cmake  controller.cpp  controller.h  controlwindow.cpp  controlwindow.h  controlwindow.ui  data_exchange_mutex.cpp  data_exchange_mutex.h  data_logging.cpp  data_logging.h  data_mutex.cpp  data_mutex.h  ecat_func.cpp  ecat_func.h  filter.cpp  filter.h  kinematics.cpp  kinematics.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optimization.cpp  (+10 more)
.cmake/api/v1/reply/: cmakeFiles-v1-c80ca2a0dd693d1627c4.json  codemodel-v2-a565558e0c413149d846.json  index-2024-04-23T07-47-11-0821.json  target-RT_ECAT_MASTER_ELMO_GOLD-Release-b41b57726b727c8b17e6.json  target-RT_ECAT_MASTER_ELMO_GOLD_autogen-Release-d87439491bb8435a36bb.json  target-RT_ECAT_MASTER_ELMO_GOLD_autogen_timestamp_deps-Release-70faec51b7e4f9b80095.json
.cmake/api/v1/reply.prev/: cache-v2-56a1a88495671a2dc4e6.json  cmakeFiles-v1-a689dd9fb12e4d644e0d.json  codemodel-v2-54f00a554d08eb3a214c.json  index-2024-04-22T11-48-28-0106.json  target-RT_ECAT_MASTER_ELMO_GOLD-Release-e9a3849c3abf56e5f846.json
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: AlignedBox.h.5A0BB4AEC7863A62.idx  AngleAxis.h.E1D59C16BCEB7D9A.idx  Array.h.3CB626187E933DA9.idx  ArrayBase.h.27D1C33E9BDDD4AC.idx  ArrayCwiseBinaryOps.h.884BE1A71CB162FA.idx  ArrayCwiseUnaryOps.h.80265465E29BAEEA.idx  ArrayWrapper.h.77A91A9F68F9B322.idx  Assign.h.98FAE1A289E3B0B6.idx  AssignEvaluator.h.011EEB79C71C67D1.idx  AssignmentFunctors.h.7EB1E0FFDA44221B.idx  BDCSVD.h.EB1AC3598108AAB6.idx  BandMatrix.h.1BF55B0B952E28FA.idx  BinaryFunctors.h.C03DCF882D7F550F.idx  BlasUtil.h.A00E918ECC24FE2B.idx  Block.h.C2E2FAA5DE7B6654.idx  BlockHouseholder.h.50748C6F2DAB88EB.idx  BlockMethods.h.A8348095E1733A95.idx  BooleanRedux.h.A09AA4A8EC21A2D5.idx  Cholesky.570DA0E6D8FFBCD1.idx  ColPivHouseholderQR.h.90D998E8080BF312.idx  CommaInitializer.h.ED275A0B466E4ACA.idx  CommonCwiseBinaryOps.h.F1D683E3F303DEE8.idx  CommonCwiseUnaryOps.h.099222E7E32A0A89.idx  CompleteOrthogonalDecomposition.h.AED73F0C46332F3E.idx  Complex.h.3CB4BDBC1657F707.idx  Complex.h.491AB1EC9D1C952A.idx  ComplexEigenSolver.h.A1815D4FE78B63FD.idx  ComplexSchur.h.E0652F7B43016F5C.idx  ConditionEstimator.h.63E1875B96F6588C.idx  ConjHelper.h.1DD058A9E36C6D5A.idx  Constants.h.AB22452C495D2CDD.idx  Core.21D5439CEE14EF2F.idx  CoreEvaluators.h.619EB41769835908.idx  CoreIterators.h.2212A583AC7C279A.idx  CwiseBinaryOp.h.55AEFB162D6124CD.idx  CwiseNullaryOp.h.359446853074E93D.idx  CwiseTernaryOp.h.C3F5C4007B8FAC6B.idx  CwiseUnaryOp.h.5717F0BDD9E4A750.idx  CwiseUnaryView.h.0D4E3E4B3B3B1D2E.idx  Dense.5600FB11F74A42B3.idx  (+772 more)
RT_ECAT_MASTER_ELMO_GOLD_autogen/: deps  mocs_compilation.cpp
RT_ECAT_MASTER_ELMO_GOLD_autogen/EWIEGA46WW/: moc_controlwindow.cpp  moc_controlwindow.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_qcustomplot.cpp.d
RT_ECAT_MASTER_ELMO_GOLD_autogen/include/: ui_controlwindow.h  ui_mainwindow.h
initial_encoder/: Motor 0.txt  Motor 1.txt  Motor 10.txt  Motor 11.txt  Motor 12.txt  Motor 13.txt  Motor 2.txt  Motor 3.txt  Motor 4.txt  Motor 5.txt  Motor 6.txt  Motor 7.txt  Motor 8.txt  Motor 9.txt
